// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table.filter renders custom content correctly 1`] = `
<div>
  <div class="gov-dropdown  gov-dropdown-placement-bottomRight" style="display: none;">
    <div class="gov-dropdown-content">
      <div class="custom-filter-dropdown">custom filter</div>
    </div>
  </div>
</div>
`;

exports[`Table.filter renders filter correctly 1`] = `
<div class="gov-table-wrapper">
  <div class="gov-spin-nested-loading">
    <div class="gov-spin-container">
      <div class="gov-table gov-table-scroll-position-left gov-table-default">
        <div class="gov-table-content">
          <!---->
          <div class="gov-table-body">
            <table class="">
              <colgroup>
                <col>
              </colgroup>
              <thead class="gov-table-thead">
                <tr>
                  <th key="name" class="gov-table-column-has-actions gov-table-column-has-filters">
                    <div>Name</div><i title="筛选" class="anticon anticon-filter gov-dropdown-trigger"><svg viewBox="64 64 896 896" data-icon="filter" width="1em" height="1em" fill="currentColor" aria-hidden="true" class="">
                        <path d="M349 838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V642H349v196zm531.1-684H143.9c-24.5 0-39.8 26.7-27.5 48l221.3 376h348.8l221.3-376c12.1-21.3-3.2-48-27.7-48z"></path>
                      </svg></i>
                  </th>
                </tr>
              </thead>
              <tbody class="gov-table-tbody">
                <tr class="gov-table-row gov-table-row-level-0" data-row-key="0">
                  <td class="gov-table-column-has-actions gov-table-column-has-filters"><span class="gov-table-row-indent indent-level-0" style="padding-left: 0px;"></span>
                    <!---->Jack</td>
                </tr>
                <tr class="gov-table-row gov-table-row-level-0" data-row-key="1">
                  <td class="gov-table-column-has-actions gov-table-column-has-filters"><span class="gov-table-row-indent indent-level-0" style="padding-left: 0px;"></span>
                    <!---->Lucy</td>
                </tr>
                <tr class="gov-table-row gov-table-row-level-0" data-row-key="2">
                  <td class="gov-table-column-has-actions gov-table-column-has-filters"><span class="gov-table-row-indent indent-level-0" style="padding-left: 0px;"></span>
                    <!---->Tom</td>
                </tr>
                <tr class="gov-table-row gov-table-row-level-0" data-row-key="3">
                  <td class="gov-table-column-has-actions gov-table-column-has-filters"><span class="gov-table-row-indent indent-level-0" style="padding-left: 0px;"></span>
                    <!---->Jerry</td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table.filter renders menu correctly 1`] = `
<div>
  <div class="gov-dropdown  gov-dropdown-placement-bottomRight" style="display: none;">
    <div class="gov-table-filter-dropdown gov-dropdown-content">
      <ul role="menu" tabindex="0" class="gov-dropdown-menu gov-dropdown-menu-vertical gov-dropdown-menu-root">
        <li role="menuitem" class="gov-dropdown-menu-item"><label class="gov-checkbox-wrapper"><span class="gov-checkbox"><input type="checkbox" class="gov-checkbox-input" value=""><span class="gov-checkbox-inner"></span></span></label><span>Boy</span></li>
        <li role="menuitem" class="gov-dropdown-menu-item"><label class="gov-checkbox-wrapper"><span class="gov-checkbox"><input type="checkbox" class="gov-checkbox-input" value=""><span class="gov-checkbox-inner"></span></span></label><span>Girl</span></li>
        <li role="menuitem" class="gov-dropdown-menu-submenu gov-dropdown-menu-submenu-vertical">
          <div aria-haspopup="true" title="Title" class="gov-dropdown-menu-submenu-title">Title<i class="gov-dropdown-menu-submenu-arrow"></i></div>
        </li>
      </ul>
      <div class="gov-table-filter-dropdown-btns"><a class="gov-table-filter-dropdown-link confirm">确定</a><a class="gov-table-filter-dropdown-link clear">重置</a></div>
    </div>
  </div>
</div>
`;

exports[`Table.filter renders radio filter correctly 1`] = `
<div>
  <div class="gov-dropdown  gov-dropdown-placement-bottomRight" style="display: none;">
    <div class="gov-table-filter-dropdown gov-dropdown-content">
      <ul role="menu" tabindex="0" class="gov-dropdown-menu gov-dropdown-menu-vertical gov-dropdown-menu-root">
        <li role="menuitem" class="gov-dropdown-menu-item"><label class="gov-radio-wrapper"><span class="gov-radio"><input type="radio" class="gov-radio-input" value=""><span class="gov-radio-inner"></span></span></label><span>Boy</span></li>
        <li role="menuitem" class="gov-dropdown-menu-item"><label class="gov-radio-wrapper"><span class="gov-radio"><input type="radio" class="gov-radio-input" value=""><span class="gov-radio-inner"></span></span></label><span>Girl</span></li>
        <li role="menuitem" class="gov-dropdown-menu-submenu gov-dropdown-menu-submenu-vertical">
          <div aria-haspopup="true" title="Title" class="gov-dropdown-menu-submenu-title">Title<i class="gov-dropdown-menu-submenu-arrow"></i></div>
        </li>
      </ul>
      <div class="gov-table-filter-dropdown-btns"><a class="gov-table-filter-dropdown-link confirm">确定</a><a class="gov-table-filter-dropdown-link clear">重置</a></div>
    </div>
  </div>
</div>
`;
